# apogeu

./: .gitattributes  .gitignore  README.md  events.ndjson  package-lock.json  package.json  pyproject.toml  vercel.json
.cursor/plans/: grid_e_suavidade_notas_dbace017.plan.md
apps/instrument/: README.md  package.json  vercel.json  vite.config.ts
apps/instrument/public/config/: default-instrument.yaml
apps/instrument/public/fixtures/: parity_gate_open.json
apps/instrument/src/: Visualizer.tsx  embed.ts  ndjsonReader.ts  useLiveStream.ts
config/: default-instrument.yaml  embed-frame-ancestors.mjs
docs/: architecture.md  deployment-vercel.md  musical-mapping.md  python-dev-cli.md
scripts/: download_model.py  parity_export.py  sync-vercel-embed-csp.mjs
src/: __init__.py  camera.py  camera_picker.py  camera_probe.py  config.py  events.py  gestures.py  list_cameras.py  main.py  overlay.py  recognizer.py  stabilizer.py  ws_hub.py
src/expression/: __init__.py  distance.py  engine.py  features.py  presence.py  smooth.py  viewport.py
src/mapping/: __init__.py  gate_latch.py  loader.py  mapper.py  scale.py
tests/: test_distance.py  test_expression.py  test_gate_scale.py  test_loader.py  test_pitch_plateau.py  test_zone_quantizer.py
web/mini-app/: README.md  index.html  package-lock.json  package.json
web/mini-app/src/: App.tsx  Visualizer.tsx  ndjsonReader.ts  scale.ts  styles.css  types.ts  useLiveStream.ts  useToneEngine.ts
